--- a/Views/404.html
+++ b/Views/404.html
@@ -10,16 +10,13 @@
 <body style="background: black;">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand" href="/Home">Node</a>
+            <a class="navbar-brand" href="/Home">ShopBook</a>
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/admin/AddProduct">Add Product</a>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/Home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="/admin/AddProduct">Add Book</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/error">404</a>
