--- a/Views/Home.html
+++ b/Views/Home.html
@@ -11,16 +11,13 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand active" href="/Home">Node</a>
+            <a class="navbar-brand active" href="/Home">ShopBook</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link active" href="/Home">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/admin/AddProduct">Add Product</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/error">404</a>
