--- a/Views/Home.html
+++ b/Views/Home.html
@@ -11,13 +11,13 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand active" href="/Home">ShopBook</a>
+            <a class="navbar-brand active" href="/Home">BookShop</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" href="/Home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/AddProduct">Add Product</a>
+                    <a class="nav-link" href="/admin/AddProduct">Add Book</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/error">404</a>
