Rolling back Pug changes in master to generalize master.

--- a/Views/AddProduct.html
+++ b/Views/AddProduct.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand" href="/Home">ShopBook</a>
+            <a class="navbar-brand" href="/Home">BookShop</a>
             <ul class="navbar-nav">
                  <li class="nav-item">
                     <a class="nav-link" href="/Home">Home</a>
