--- a/Views/AddProduct.html
+++ b/Views/AddProduct.html
@@ -29,7 +29,8 @@
     <div class="container w-25">
         <form action="/Product" method="POST">
             <div class="form-group">
-                <input type="text" name="pName" placeholder="Product Name" class="form-control mb-1" placeholder="Product Name">
+                <input type="text" name="pName" placeholder="Name" class="form-control mb-1">
+                 <input type="number" name="pCost" placeholder="Cost" class="form-control mb-1">
                 <button type="Submit" class="btn btn-success mr-auto ml-auto">Submit</button>
             </div>
         </form> 
