--- a/Views/404.handlebars
+++ b/Views/404.handlebars
@@ -10,7 +10,7 @@
 <body style="background: black;">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand active" href="/Home">BookShop<sup>HandleBars</sup></a>
+           <a class="navbar-brand active" href="/Home">BookShop<sup>HandleBars</sup></a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/Home">Home</a>
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <img src="/Images/404.png" alt="404 Error" style="width:100%;height:90vh">
+    <img src="/Images/404.png" alt="404 Error" style="width:100%;height:90vh;">
     <!-- <div class="container">
         <h1 class="text-danger">404</h1>
         <h2 class="text-danger">Thats not found!!!</h2>
