--- a/Views/Home.html
+++ b/Views/Home.html
@@ -11,17 +11,15 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand active" href="/Home">Node</a>
+            <a class="navbar-brand active" href="/Home">BookShop<sup>HandleBars</sup></a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/AddProduct">Add Product</a>
+                    <a class="nav-link" href="/Home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="/admin/AddProduct">Add Book</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="/error">404</a>
                 </li>
