--- a/Views/CommonTemplates/MidNavigation.ejs
+++ b/Views/CommonTemplates/MidNavigation.ejs
@@ -7,10 +7,18 @@ else{%> <body>  <% } %>
             <a class="navbar-brand" href="/Home">BookShop</a>
             <ul class="navbar-nav">
                  <li class="nav-item">
-                    <a class="nav-link" href="/Home">Home</a>
+                    <% if (page == 'Home'){ %>
+                        <a class="nav-link active" href="/Home">Home</a>
+                    <% } else{ %> 
+                        <a class="nav-link" href="/Home">Home</a>
+                    <% } %>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/AddProduct">Add Book</a>
+                    <% if (page == 'AddBook'){ %>
+                        <a class="nav-link active" href="/admin/AddProduct">Add Book</a>
+                    <% } else{ %> 
+                        <a class="nav-link" href="/admin/AddProduct">Add Book</a>
+                    <% } %>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/error">404</a>
