Reorganised to finish EJS and start MVC

--- a/Views/AddProduct.ejs
+++ b/Views/AddProduct.ejs
@@ -2,7 +2,7 @@
     <title>NodeProj | Add Book</title>
     <%- include('CommonTemplates/MidNavigation.ejs') %>
     <div class="container w-25">
-        <form action="/Product" method="POST">
+        <form action="Product" method="POST">
             <div class="form-group">
                 <input type="text" name="pName" placeholder="Name" class="form-control mb-1">
                  <input type="number" name="pCost" placeholder="Cost" class="form-control mb-1">
