--- a/Views/CommonTemplates/MidNavigation.ejs
+++ b/Views/CommonTemplates/MidNavigation.ejs
@@ -15,9 +15,9 @@ else{%> <body>  <% } %>
                 </li>
                 <li class="nav-item">
                     <% if (page == 'AddBook'){ %>
-                        <a class="nav-link active" href="/admin/AddProduct">Add Book</a>
+                        <a class="nav-link active" href="/Admin/AddProduct">Add Book</a>
                     <% } else{ %> 
-                        <a class="nav-link" href="/admin/AddProduct">Add Book</a>
+                        <a class="nav-link" href="/Admin/AddProduct">Add Book</a>
                     <% } %>
                 </li>
                 <li class="nav-item">
