--- a/Modules/Admin/Views/AddProduct.ejs
+++ b/Modules/Admin/Views/AddProduct.ejs
@@ -1,3 +1,13 @@
 <%- include('PageStart.ejs') %>
-<h1>admin addProd</h1>
+    <div class="container col-xl-3 col-lg-5 col-md-6 col-sm-8">
+        <h4 class="text-center">Enter product details</h4>
+        <form action="AddProduct" method="POST">
+            <input type="text" class="form-control mb-1" placeholder="Name" name="pName">
+            <input type="text" class="form-control mb-1" placeholder="Image url" name="pImageUrl">
+            <input type="number" class="form-control mb-1" placeholder="Price" name="pPrice" step="0.01">
+            <textarea class="form-control mb-1" placeholder="Description" name="pDesc" rows="5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi cum accusantium, iure non delectus placeat.</textarea>
+            <button type="submit" class="btn btn-outline-success mb-1">Submit</button>
+        </form>
+    </div>
+
 <%- include('PageEnd.ejs') %>
