--- a/Modules/Common/Views/Header/PageStart.ejs
+++ b/Modules/Common/Views/Header/PageStart.ejs
@@ -8,7 +8,6 @@
     <title><%= 'Mane | ' + module + ' | ' + page %></title>
 </head>
 <body>
-
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
             <a class="navbar-brand" href="/">Mane</a>
@@ -16,45 +15,43 @@
                  <% if(module == 'enduser'){ %>
                     <li class="nav-item">
                         <% if (page == 'Products'){ %>
-                            <a class="nav-link active" href="Products">Products</a>
+                            <a class="nav-link active" href="/User/Products">Products</a>
                         <% } else{ %> 
-                            <a class="nav-link" href="Products">Products</a>
+                            <a class="nav-link" href="/User/Products">Products</a>
                         <% } %>
                     </li>
-
                     <li class="nav-item">
                         <% if (page == 'Orders'){ %>
-                            <a class="nav-link active" href="Orders"> Orders </a>
+                            <a class="nav-link active" href="/User/Orders"> Orders </a>
                         <% } else{ %> 
-                            <a class="nav-link" href="Orders"> Orders </a>
+                            <a class="nav-link" href="/User/Orders"> Orders </a>
                         <% } %>
                     </li>
-
                     <li class="nav-item">
                         <% if (page == 'Cart'){ %>
-                            <a class="nav-link active" href="Cart"> Cart </a>
+                            <a class="nav-link active" href="/User/Cart"> Cart </a>
                         <% } else{ %> 
-                            <a class="nav-link" href="Cart"> Cart </a>
+                            <a class="nav-link" href="/User/Cart"> Cart </a>
                         <% } %>
                     </li>
-
                 <% } else if (module == 'admin') {%>
                     <li class="nav-item">
                         <% if (page == 'Products'){ %>
-                            <a class="nav-link active" href="Products"> Products </a>
+                            <a class="nav-link active" href="/Admin/Products"> Products </a>
                         <% } else{ %> 
-                            <a class="nav-link" href="Products"> Products </a>
+                            <a class="nav-link" href="/Admin/Products"> Products </a>
                         <% } %>
                     </li>
-
                     <li class="nav-item">
                         <% if (page == 'AddProduct'){ %>
-                            <a class="nav-link active" href="AddProduct"> Add Product</a>
+                            <a class="nav-link active" href="/Admin/AddProduct"> Add Product</a>
                         <% } else{ %> 
-                            <a class="nav-link" href="AddProduct"> Add Product</a>
+                            <a class="nav-link" href="/Admin/AddProduct"> Add Product</a>
                         <% } %>
                     </li>
                 <% } %> 
+                <li class="nav-item"> <a class="nav-link ml-5" href="/Admin">Admin</a></li>
+                <li class="nav-item"> <a class="nav-link" href="/User">User</a></li>
             </ul>
         </div>
     </nav>
