Fixed issue - Cart data is not loaded on app restart

--- a/Modules/EndUser/Views/Cart.ejs
+++ b/Modules/EndUser/Views/Cart.ejs
@@ -1,7 +1,7 @@
 <%- include('PageStart.ejs') %>
 <div class="container d-flex flex-column mt-5">
     <% for(cartItem in cart) { %>
-        <div class="media w-75">
+        <div class="media w-75 mb-3">
             <img class="mr-3 align-self-start" src="https://source.unsplash.com/random/90x93">
             <div class="media-body d-flex justify-content-between">
                 <div>
