--- a/Modules/EndUser/Views/Cart.ejs
+++ b/Modules/EndUser/Views/Cart.ejs
@@ -1,23 +1,26 @@
 <%- include('PageStart.ejs') %>
 <div class="container d-flex flex-column mt-5">
-    <% for(cartItem in cart) { %>
+    <% for(cartItem of cart) { %>
         <div class="media w-75 mb-3">
-            <img class="mr-3 align-self-start" src="https://source.unsplash.com/random/90x93">
+            <img style="max-height: 6rem;" class="mr-3 align-self-start" src="<%= cartItem.url %>">
             <div class="media-body d-flex justify-content-between">
                 <div>
-                    <h5>Wooden Bongos</h5>
-                    <h6 class="text-muted">&#8377; 290</h6>
+                    <h5> <%=cartItem.name %></h5>
+                    <h6 class="text-muted">&#8377; <%=cartItem.price %></h6>
                     <div class = "row">
-                        <div class="col-sm" style="padding-right: 0; max-width: fit-content;"><a href="" class="btn btn-outline-primary btn-sm d-inline" >-</a></div>
-                        <div class="col-sm" style="padding: 0; max-width: fit-content;"><input type="number" class="form-control form-control-sm d-inline" placeholder="Quantity" style="line-height: 1.3rem;"></div>    
-                        <div class="col-sm"  style="padding-left: 0;"><a href="" class="btn btn-outline-primary btn-sm d-inline">+</a></div> 
-                        <div><a href="" class="btn btn-outline-danger btn-sm">Remove item</a></div>
+                        <div class="col-sm" style="padding-right: 0; max-width: fit-content;">
+                            <a href="<%=  '/User/Cart/'+cartItem.id + '/reduce'%>" class="btn btn-outline-primary btn-sm d-inline" >-</a>
+                        </div>
+                        <div class="col-sm" style="padding: 0; max-width: fit-content;"><input type="number" class="form-control form-control-sm d-inline" placeholder="Quantity" style="line-height: 1.3rem;" value="<%=cartItem.quantity %>"></div>    
+                        <div class="col-sm"  style="padding-left: 0;">
+                            <a href="<%= '/User/Cart/'+ cartItem.id + '/add'%>"" class="btn btn-outline-primary btn-sm d-inline">+</a>
+                        </div> 
+                        <div><a href="<%= '/User/Cart/'+ cartItem.id + '/delete'%>" class="btn btn-outline-danger btn-sm">Remove item</a></div>
                     </div>
                 </div>
 
-                <div class="d-flex flex-column">
-                    <div><h6>Price</h6></div>
-                    <div><h3>&#8377; 1160</h3></div>
+                <div class="d-flex align-items-center">
+                    <div><h3>&#8377; <%= cartItem.price * cartItem.quantity %></h3></div>
                 </div>
             </div>
         </div>
@@ -26,7 +29,7 @@
     <div class="d-flex flex-row-reverse mt-5 w-75">
         <div class="d-flex flex-column">
             <div><h6>Total</h6></div>
-            <div><h3>&#8377; 1160</h3></div>
+            <div><h3>&#8377; <%= cartValue %></h3></div>
         </div>
         <div class="d-flex flex-column-reverse mr-3" style="padding-bottom: 0.5rem;;">
             <div> <a href="" class="btn btn-outline-success">Checkout</a></div>
