--- a/Modules/Common/Views/ProductList/ProductList.ejs
+++ b/Modules/Common/Views/ProductList/ProductList.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-    <% if(products.length > 0){  %>
+    <% if(products && products.length > 0){  %>
         <div class="card-columns">
             <% for(const product of products){ %>
                 <div class="card border-info">
