finished cart changes. not implemented 'cannot delete a product in cart'.

--- a/Modules/EndUser/Views/Cart.ejs
+++ b/Modules/EndUser/Views/Cart.ejs
@@ -40,7 +40,7 @@
         </div>
 
         <div class="d-flex flex-column-reverse mr-3" style="padding-bottom: 0.5rem;;">
-            <div> <a href="" class="btn btn-outline-danger">Clear cart</a></div>
+            <div> <a href="/User/Cart/Clear" class="btn btn-outline-danger">Clear cart</a></div>
         </div>
     </div>
     <% }%>
