--- a/Modules/EndUser/Views/Cart.ejs
+++ b/Modules/EndUser/Views/Cart.ejs
@@ -10,13 +10,13 @@
                     <h6 class="text-muted">&#8377; <%=cartItem.price %></h6>
                     <div class = "row">
                         <div class="col-sm" style="padding-right: 0; max-width: fit-content;">
-                            <a href="<%=  '/User/Cart/'+cartItem.id + '/reduce'%>" class="btn btn-outline-primary btn-sm d-inline" >-</a>
+                            <a href="<%=  '/User/Cart/'+cartItem._id + '/reduce'%>" class="btn btn-outline-primary btn-sm d-inline" >-</a>
                         </div>
                         <div class="col-sm" style="padding: 0; max-width: fit-content;"><input type="number" class="form-control form-control-sm d-inline" placeholder="Quantity" style="line-height: 1.3rem;" value="<%=cartItem.quantity %>"></div>    
                         <div class="col-sm"  style="padding-left: 0;">
-                            <a href="<%= '/User/Cart/'+ cartItem.id + '/add'%>"" class="btn btn-outline-primary btn-sm d-inline">+</a>
+                            <a href="<%= '/User/Cart/'+ cartItem._id + '/add'%>"" class="btn btn-outline-primary btn-sm d-inline">+</a>
                         </div> 
-                        <div><a href="<%= '/User/Cart/'+ cartItem.id + '/delete'%>" class="btn btn-outline-danger btn-sm">Remove item</a></div>
+                        <div><a href="<%= '/User/Cart/'+ cartItem._id + '/delete'%>" class="btn btn-outline-danger btn-sm">Remove item</a></div>
                     </div>
                 </div>
 
