Finished till orders. Didnt do ui for orders page.

--- a/Modules/EndUser/Views/Cart.ejs
+++ b/Modules/EndUser/Views/Cart.ejs
@@ -36,7 +36,7 @@
             <div><h3>&#8377; <%= cartValue %></h3></div>
         </div>
         <div class="d-flex flex-column-reverse mr-3" style="padding-bottom: 0.5rem;;">
-            <div> <a href="" class="btn btn-outline-success">Checkout</a></div>
+            <div> <a href="/User/CheckOut" class="btn btn-outline-success">Checkout</a></div>
         </div>
 
         <div class="d-flex flex-column-reverse mr-3" style="padding-bottom: 0.5rem;;">
