Completed Session changes. user is logged in randomly without creds.

--- a/Modules/Common/Views/AddToCart/AddToCart.ejs
+++ b/Modules/Common/Views/AddToCart/AddToCart.ejs
@@ -1,4 +1,6 @@
 <form action="/User/AddToCart" method="POST" class="d-inline">
     <input type="hidden" value="<%= productID %>" name="productID">
+    <%if(isLoggedIn){%>
     <button class="btn btn-outline-success" type="submit">Add to cart</button>
+    <%} %>
 </form>
