redirect after session is stored in db. done in just one place.

--- a/Modules/Common/Views/Header/PageStart.ejs
+++ b/Modules/Common/Views/Header/PageStart.ejs
@@ -62,7 +62,7 @@
                     </form>
                 <% } else {%>
                         <form class="form-inline ml-3 mr-1"  action="/Logout" method="GET">
-                            <input type="submit" class="btn btn-success" value="Logout">
+                            <input type="submit" class="btn btn-danger" value="Logout">
                         </form>
                 <% } %>
                 <!-- <li class="nav-item"> <a class="nav-link ml-5" href="/Admin">Admin</a></li>
