--- a/Modules/Common/Views/SignUp/SignUp.ejs
+++ b/Modules/Common/Views/SignUp/SignUp.ejs
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container w-25 mt-5">
-        <form action="/Signup" method="POST">
+        <form action="/Auth/Signup" method="POST">
             <input class="form-control mb-2" type="text" name="email" placeholder="Email">
             <input class="form-control mb-2" type="text" name="name" placeholder="Name">
             <input class="form-control mb-2" type="text" name="password" placeholder="Password">
